--- a/fancy.css
+++ b/fancy.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 
-/*** INDEX FILE ***/
+/*** GENERAL ***/
 p {
     font-family: 'Titillium Web', sans-serif; 
 }
@@ -11,12 +11,56 @@ h1{
 
 a{
     color: green;
+    font-size: 1.5em;
+    text-decoration: none;
+    font-family: 'Titillium Web', sans-serif;
 }
+
 body{
     background-color: rgb(219, 208, 193);
+    margin: 0 auto;
+    max-width: 990px;
+}
+
+/*** four paragraphs ***/
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: .5em;
+    margin-top: 15px;
+}
+
+.grid-item{
+    padding: 0 10px;
+}
+
+.grid-item:nth-child(odd){
+    background-color: tan;
+}
+
+.grid-item:nth-child(even){
+    background-color: lightgoldenrodyellow;
+}
+
+.box1{
+    grid-column: 1/3;
+}
+
+.box4{
+    grid-column: 1/3;
 }
 
 /*** TIC TAC TOE ***/
+
+.ticTitle{
+    text-align: center;
+    margin-top: 30px;
+}
+#ticTac {
+    margin-top: 15px;
+}
+
 td {
     border: 5px solid black;
     width: 100px;
@@ -32,7 +76,12 @@ td {
     text-align: center;
     font-size: 16pt;
     background-color: #777777;
+    margin: 0 auto;
     width: 340px;
+}
+
+#ticTackToeTable{
+    margin: 0 auto;
 }
 
 td:nth-child(1) {
@@ -51,3 +100,27 @@ tr:nth-child(3) > td {
     border-bottom: none;
 }
   
+/***  FOOTER ***/
+
+#footer{
+    text-align: center;
+}
+
+/*** ABOUT PAGE ***/
+
+ul{
+    list-style-type: none;
+}
+
+li{
+    margin-top: 3px;
+}
+
+.img{
+    text-align: center;
+    margin: 5px auto;
+}
+
+ iframe{
+     border: none;
+ }
